# codex_idea

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  read_csv_temp.py  vercel.json
backend/: .dockerignore  .gcloudignore  Dockerfile  README.md  chunk_aa  chunk_ab  chunk_ac  chunk_ad  chunk_ae  chunk_af  chunk_ag  chunk_ah  chunk_ai  chunk_aj  chunk_ak  chunk_al  chunk_am  chunk_an  chunk_ao  chunk_ap  chunk_aq  chunk_ar  chunk_as  chunk_at  model_registry.example.json  pyproject.toml  requirements.txt
backend/app/: __init__.py  data_sources.py  feature_catalog.py  features.py  history.py  ingestion.py  jobs.py  live.py  main.py  ml_pipeline.py  model.py  public_model_status.py  race_schedule.py  race_schedule_seed.json  race_storage.py  races_data.py  risk_model.py  runner_integrity.py  runner_state.py  schemas.py  settlement.py  status.py  trained_model.py
backend/data/: README.md  netkeiba_list_urls.txt  sample_race.json
backend/docs/: data_pipeline.md  foundation_rebuild.md  model_readiness.md  model_redesign_2026.md  strategy_confidence_audit.md  supabase_prediction_history.sql  trifecta_strategy.md
backend/scripts/: backfill_predictions_from_history.py  backtest_simulator.py  build_features.py  convert_keiba_data.py  daily_model_zoo_retrain.py  enrich_netkeiba_2026_features.py  experiment_holdout_2026.py  generate_prediction_history.py  generate_synthetic_history.py  import_netkeiba_exports.py  ingest_csv.py  live_update_loop.py  merge_jra_segment_model.py  netkeiba_collect.py  netkeiba_extract_race_urls.py  netkeiba_fetch.py  (+14 more)
(+19 files in other folders)
