[project]
name = "umalab-backend"
version = "0.2.0"
description = "UmaLab horse-racing ML API and data pipeline."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=16.1.0,<18.0.0",
  "duckdb>=1.0.0,<2.0.0",
  "scikit-learn>=1.5.0,<1.7.0",
  "joblib>=1.4.2,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
